--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 82, 82, 82;
-    --background-end-rgb: 24, 24, 27;
+@layer base {
+    :root {
+      --foreground-rgb: 255 255 255;
+      --background-start-rgb: 82 82 82;
+      --background-end-rgb: 24 24 27;
+      --hover-rgb: 59 130 246;
+      --tile-rgb: 107 114 128;
+      --button-focus-rgb: 2 132 199;
+      --button-active-rgb: 7 89 133;
+  }
+}
+
+
+.button-primary {
+  @apply text-center text-xl my-3 py-6 font-bold rounded-lg hover:ring hover:ring-blue-500 hover:shadow-2xl focus:bg-sky-600 active:bg-sky-800 transition-colors duration-75;
 }
 
 body {
