Begin mobile design implementation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
 }
 
 .hover-outline-color:hover {
+  @apply transition-[outline-color] ease-in-out duration-100;
   outline-color: rgb(var(--hover-rgb));
 }
 
@@ -24,7 +25,7 @@
 }
 
 .button-primary {
-  @apply text-center text-xl my-3 py-6 font-bold rounded-lg outline outline-4 outline-transparent hover:shadow-2xl transition-colors duration-75;
+  @apply text-center text-xl my-3 py-6 font-bold rounded-lg outline outline-4 outline-transparent hover:shadow-2xl transition-[outline-color] ease-in-out duration-100;
 }
 
 .button-primary:active {
@@ -32,7 +33,7 @@
 }
 
 .selected-section {
-  @apply text-center text-xl my-3 py-6 font-bold rounded-lg outline outline-4 outline-transparent hover:shadow-2xl transition-colors duration-75;
+  @apply text-center text-xl my-3 py-6 font-bold rounded-lg outline outline-4 outline-transparent hover:shadow-2xl transition-[outline-color] ease-in-out duration-100;
   background-color: rgb(var(--button-focus-rgb));
   color: rgb(var(--button-text-rgb));
 }
