--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@
 }
 
 .button-primary {
-  @apply text-center text-xl my-3 py-6 font-bold rounded-lg outline outline-4 outline-transparent hover:shadow-2xl transition-[outline-color] ease-in-out duration-100;
+  @apply text-center text-base md:text-xl my-3 md:py-6 font-bold rounded-lg outline outline-4 outline-transparent hover:shadow-2xl transition-[outline-color] ease-in-out duration-100;
 }
 
 .button-primary:active {
@@ -33,7 +33,7 @@
 }
 
 .selected-section {
-  @apply text-center text-xl my-3 py-6 font-bold rounded-lg outline outline-4 outline-transparent hover:shadow-2xl transition-[outline-color] ease-in-out duration-100;
+  @apply text-center text-base md:text-xl my-3 md:py-6 font-bold rounded-lg outline outline-4 outline-transparent hover:shadow-2xl transition-[outline-color] ease-in-out duration-100;
   background-color: rgb(var(--button-focus-rgb));
   color: rgb(var(--button-text-rgb));
 }
@@ -41,8 +41,6 @@
 .selected-section:active {
   background-color: rgb(var(--button-active-rgb));
 }
-
-
 
 body {
   color: rgb(var(--text-rgb));
