--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
     :root {
+      --wallpaper-url: url('/Images/patrick-perkins-xUTwSZqqFxQ-unsplash.jpg');
       --text-rgb: 255 255 255;
       --background-start-rgb: 82 82 82;
       --background-end-rgb: 24 24 27;
@@ -13,6 +14,10 @@
       --button-focus-rgb: 2 132 199;
       --button-active-rgb: 7 89 133;
   }
+}
+
+.active-bg {
+  background-image: var(--wallpaper-url);
 }
 
 .active-color {
